add title and TAC members

--- a/content/01.partA.md
+++ b/content/01.partA.md
@@ -1,8 +1,19 @@
 ## Part A: Progress Report {.page_break_before}
 
-Format options:  
-- If the student has not yet published a first author paper, the third report should be written in a first author draft paper format. If there are multiple projects, the different projects should be summarized. A bullet-point thesis outline should also be provided (max one page). 
-- Alternatively, if the fellow has already published a first author paper, the TAC3 report can instead be presented as a detailed thesis outline including key results. This is recommended for students who work on multiple projects and whose publication(s) do not cover all projects.
+### Thesis Advisory Committee
 
+- Zamin Iqbal (Supervisor) - EMBL-EBI
+- John Marioni (Chair) - EMBL-EBI
+- Georg Zeller - EMBL Heidelberg
+- Estée Török - University of Cambridge
+
+**Starting Date**: 12/10/2017  
+**Qualifying Assessment Date**: 06/07/2018  
+**Second TAC Meeting**: 15/10/2019  
+**Third TAC Meeting**: 13/10/2020
+
+### Thesis title
+
+> **Examining bacterial variation with genome graphs**
 
 
