add executive summary [#1]

--- a/content/01.partA.md
+++ b/content/01.partA.md
@@ -12,8 +12,30 @@
 **Second TAC Meeting**: 15/10/2019  
 **Third TAC Meeting**: 13/10/2020
 
-### Thesis title
+### Examining bacterial variation with genome graphs
 
-> **Examining bacterial variation with genome graphs**
+#### Executive summary
 
+Genomics is now ubiquitous in clinical and public health microbiology, at least in the
+developed world. However, many significant challenges remain.
+- Bacterial genomes harbour huge amounts of diversity, even within a species, and
+  traditional reference-based approaches are problematic.
+- Much of the variation in bacteria is fundamentally inaccessible to short reads.
+- Long Nanopore reads are noisy, and SNP calling with this data is not properly
+  benchmarked or standardised.
+- Since *Mycobacterium tuberculosis* (Mtb) infects so many people, there is potential
+  for considerable impact for clinical applications.
+- There is also much to be gained from a high-quality pan-genome of Mtb as well as a
+  detailed map of its enigmatic *pe/ppe* gene repertoire.
+
+
+These motivations drive the following PhD thesis structure:
+1. Develop algorithms and software for variant discovery using bacterial genome graphs,
+   building on work of a previous student in the lab (my first paper, second author).
+2. Benchmark Nanopore versus Illumina SNP calling, showing our algorithms meet the needs
+   of clinical and public health users, validate, and publish (second paper).
+3. Improve upon current whole-genome sequencing-based drug resistance prediction for Mtb
+   using genome graphs.
+4. Curate a high-quality reference pan-genome for Mtb that includes a detailed map of
+   the *pe/ppe* genes.
 
