rearrange section headings

--- a/content/01.partA.md
+++ b/content/01.partA.md
@@ -1,6 +1,8 @@
 ## Part A: Progress Report {.page_break_before}
 
-### Thesis Advisory Committee
+### Examining bacterial variation with genome graphs
+
+#### Thesis Advisory Committee
 
 - Zamin Iqbal (Supervisor) - EMBL-EBI
 - John Marioni (Chair) - EMBL-EBI
@@ -12,7 +14,6 @@
 **Second TAC Meeting**: 15/10/2019  
 **Third TAC Meeting**: 13/10/2020
 
-### Examining bacterial variation with genome graphs
 
 #### Executive summary
 
