add chapter 1 text [#1]

--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -29,6 +29,8 @@ These motivations drive the following PhD thesis structure:
 4. Curate a high-quality reference pan-genome for Mtb that includes a detailed map of
    the *pe/ppe* genes.
 
+<!--================================================================================-->
+
 ### Motivation and Background
 
 In 2018, 1.4 million people died of tuberculosis (TB) globally, and over 10 million
@@ -140,7 +142,6 @@ will contain multiple genes, as opposed to Illumina sequencing where multiple re
 required to span a single gene. Note `pandora` does not (prior to this work) include any
 facility for discovering novel variation.
 
-
 #### Summary
 
 This PhD seeks to develop new methods to enable Nanopore-based diagnostics and
@@ -148,3 +149,275 @@ epidemiology for Mtb and other bacteria. By using PRGs as a strong prior [@doi:1
 @doi:10.1038/ng.3257], we should be able to mitigate the Nanopore error biases and indel
 issues. In the process, we aim to construct a high-quality reference pan-genome for Mtb
 that we hope will open previously inaccessible parts of its genome for investigation.
+
+<!--================================================================================-->
+
+### Chapter 1: Variant discovery in genome graphs
+
+Variation in bacterial genomes can arise through a diverse range of processes. Mutations
+can arise during replication and are inherited vertically, genetic material can be
+transferred horizontally, and homologous recombination can lead to eukaryote-like gene
+conversion [@doi:10/b4x7zf]. This breadth of ways in which bacteria can acquire new and
+varied genetic material results gives rise to the phenomenon of a pan-genome. Bacterial
+species with an "open" pan-genome may have individuals in their population who can share
+as little as 16% of their genes (*S. enterica*) [@doi:10/gfw8gq]. Not all species'
+pan-genomes are this open, but it does raise the question: what do we use as a
+"reference" genome for such a species? One solution is to use the reference genome for
+the specific strain of interest. This works fine when dealing with a single sample or
+multiple samples of the same strain. However, when expanding to many samples from
+varying strains, the reference is no longer representative. An alternative solution is
+to focus solely on the core genome - the complement of genes found in all members of a
+species (see Figure {@fig:pangenome}). The issue with this approach is the loss of
+information about variation in all of the non-core genes, which could be a large number
+if the pan-genome is open. See Figure {@fig:pangenome} for an illustration of this
+reference-bias problem.
+
+![Schematic representation of a pan-genome. Each oval represents the
+genetic content of a single individual within a species. Reference [@doi:10/gfw8gq].](images/pangenome.jpg){#fig:pangenome
+width="50%"}
+
+The message we are aiming to drive home at the beginning of this chapter is that
+reference-based analysis fundamentally cannot access all of the variation in a bacterial
+species.
+
+#### Prior work: Mosaic approximations and genotyping
+
+Standard approaches to variant analysis are effectively a first-order approximation. In
+such an approximation, samples are considered identical to the reference, one maps reads
+to it, identifies clear SNPs via the read pileup, and then modifies the reference to get
+an estimate of the sample's genome. As mentioned in
+[Motivation and Background](#motivation-and-background), `pandora` is a method developed
+by a previous PhD student in the lab, Rachel Colquhoun. It works on the premise of
+approximating a genome as a hierarchical mosaic. At a high-level, it represents a mosaic
+of loci - usually genes and intergenic regions - while at the locus-level, it is a
+mosaic of previously-seen genomes.
+
+`pandora` has two main workflows: `map` and `compare`. `map` aims to infer a consensus
+sequence from a PRG for a single sample. The consensus sequence says two things about
+the sample: the loci present in the sample, and the most likely path through the PRG for
+each present locus. Optionally, `map` can run genotyping of the sample, providing a
+Variant Call Format (VCF) file for the sample with respect to the consensus sequence (or
+a user-provided sequence). `compare` aims to infer a consensus sequence that best
+represents a given set of genomes and then genotype each sample with respect to this
+inferred "average" genome. The advantage of this approach is that the consensus best
+represents the specific samples provided. This allows for genotyping across the *entire*
+pan-genome. If a gene is present in only 2 of 50 samples then genotyping information is
+provided for those 2 samples and null for the other 48.
+
+While `pandora`, before the work in this chapter, allows comparison of genomes to a
+level of detail provided by no other tool, there is still a significant shortcoming: it
+cannot discover novel variation. If a sample contains a variant not present in the PRG,
+the best `pandora` can do is select the path that is closest to that variant. The work
+in my first chapter outlines a method for removing this limitation within `pandora` and
+provides an analysis of the gain in recall and precision by incorporating *de novo*
+variant discovery into the `pandora` workflow.
+
+#### Local *de novo* variant discovery in a genome graph
+
+There are two significant difficulties in discovering *de novo* variants on a graph. The
+first is finding regions within the graph that look like the reads mapping to them
+contain variation we do not have in the PRG. Secondly, we need to generate new paths for
+these regions and add them back into the PRG for consideration when remapping.
+
+##### Finding candidate regions
+
+We define a candidate region, $r$, as an interval within a local graph where coverage on
+the maximum likelihood path is less than a given threshold, $c$, for more than $l$
+consecutive positions. For a given read that has a mapping to $r$, we define $s_r$ to be
+the subsequence of the read mapping to $r$. We define the pileup $P_r$ as the set of all
+$s_r \in r$.
+
+##### Enumerating paths through candidate regions
+
+For $r \in R$, where $R$ is the set of all candidate regions, we construct a de Bruijn
+graph $G_r$ from $P_r$.  
+$A_L$ and $A_R$ are defined as kmers to the left and right of $r$ in the local graph.
+They are anchors to allow re-insertion of new sequences found by *de novo* discovery
+into the local graph. If $A_L \notin G_r \lor A_R \notin G_r$ then we abandon *de novo*
+discovery for $r$.  
+$T_r$ is the spanning tree obtained by performing depth-first search (DFS) on $G_r$ from
+node $A_L$. $p_r$ is defined as a path, from the root node $A_L$ of $T_r$ and ending at
+node $A_R$, which fulfills the following two conditions:
+
+- $p_r$ is shorter than the maximum allowed path length.
+- No more than $k$ nodes along $p_r$ have coverage $< (n_r \times 0.1) \times e_r$,
+  where $n_r$ is the a counter, described below, and $e_r$ is the expected k-mer
+  coverage for $r$.
+
+$V_r$ is the set of all $p_r$. If $|V_r|$ is greater than a predefined threshold, $n_r$
+is incremented by 1 and $V_r$ is repopulated. If $n_r \times 0.1 = 1.0$ then *de novo*
+discovery is abandoned for $r$.
+
+##### Pruning the path-space in a candidate region
+
+As `pandora` operates on both accurate and error-prone sequencing reads, the number of
+valid paths in $G_r$ can be very large. In testing, this results in run-times beyond
+seven days (the longest any attempt was allowed to run). The increased run-time is due
+to cycles that can occur in $G_r$ and exploring paths that will never reach our required
+end anchor $A_R$. In order to reduce the path-space within $G_r$ we prune paths based on
+multiple criteria. Critically, this pruning happens at each step of the graph walk
+(path-building).  
+In addition to $T_r$, obtained by performing DFS on $G_r$, we produce a distance map
+$D_r$ that results from running reversed breadth-first search (BFS) on $G_r$, beginning
+from node $A_R$. We say reversed BFS as we explore the predecessors of each node, rather
+than the successors. $D_r$ is implemented as a binary search tree where each node in the
+tree represents a k-mer in $G_r$ that is reachable from $A_R$ via reversed BFS. Each
+node additionally has an integer attached to it that describes the shortest path from
+that node to $A_R$.  
+We can use $D_r$ to prune the path-space by requiring, for each node, $n \in p_r$: is $n
+\in D_r$ **and** can $A_R$ be reached from $n$ in a minimum of $i$ nodes, where $i$ is
+defined as the maximum allowed path length minus the number of nodes walked to reach
+$n$. If one of these conditions is not met, we abandon $p_r$. The advantage of this
+pruning process is that we never explore paths that will not reach our required end
+point and when caught in a cycle, we will abandon the path once we have made too many
+iterations around the cycle.
+
+
+I programmed the above methods in C++ and added them into the code base for `pandora`.
+They constitute 1325 lines of source code and 3486 lines of test code. I had help with
+the implementation of multi-threading the *de novo* component and the BFS pruning from
+Leandro Ishi. The overall workflow for `pandora` with *de novo* variant discovery
+enabled is illustrated in Figure {@fig:pandora}.
+
+![Schematic of the `pandora` method. Note Steps 4-6 are those developed and added
+in the scope of chapter 1. 1) A Population Reference Graph (PRG) built from known
+variants or previous samples. 2) Sequencing reads to try and map on to the PRG. 3) Reads
+mapped on to the PRG (where possible) using minimising k-mers. Coloured segments show
+paths where reads map. 4) Local assembly of the reads using a de Bruijn graph due to
+lower than expected coverage on a section of the PRG (many unmapped reads). A new path
+is discovered (orange). 5) The new path is added into the original PRG. 6) Reads are
+remapped to the new PRG with many reads mapping to the newly included path (orange).](images/pandora.png){#fig:pandora
+width="80%"}
+
+#### Evaluation
+
+##### Simulated data
+
+The first step in evaluating the effect of adding *de novo* variant calling to `pandora`
+is with a simulated dataset. What we aim to show here is that the addition of *de novo*
+discovery allows `pandora` to improve its probability of variant detection (recall). The
+first step was randomly selecting 100 gene MSAs from a pool of 29702 obtained for
+*Escherichia coli* from the panX database [@doi:10/gczkbr]. Next, a PRG is constructed
+for each gene MSA, and a random path through each is selected using `pandora`. Each
+PRG's random path is then concatenated together to form a single "genome" sequence. We
+subsequently add SNPs to the simulated genome at a specified rate of SNPs per-gene using
+`snp-mutator` [@doi:10/d9np]. We then simulated Nanopore reads from this mutated genome
+using `nanosim-h` [@doi:10/gbj69k; @doi:10/d9nq]. `pandora map` is then run, using the
+original PRG as input, along with the reads simulated from the mutated genome. With this
+approach, we know the exact SNPs we hope to find. After running the `map` routine, we
+are left with a collection of candidate paths produced by the *de novo* component. We
+then added these back into the PRG and iterated the `map` routine again, this time
+without *de novo* discovery enabled. Re-adding variants into the graph has the effect of
+making all of the *de novo* variants visible to genotyping. The result is a VCF file
+that (hopefully) contains the variants we introduced in the beginning. To compare the
+performance of `pandora` before and after *de novo* is added, we can compare the VCF
+produced from the first round of `map` with the last VCF.
+
+To avoid error-prone conversion of linear coordinates into graph coordinates the
+evaluation of whether the variants called by `pandora` are correct was undertaken in a
+slightly more convoluted manner. We define a probe-set $P$ as a collection of probes,
+$p$, where $p$ represents an entry, $e$, in a VCF file, $V$. For each $e \in V$, $p$ is
+constructed by the concatenation of $l_w$, $e_c$, and $r_w$ (in that order), where $e_c$
+is the called variant of $e$, and $l_w$ and $r_w$ are the sequences, of maximum length
+$w$, in the VCF reference to the left and right, respectively, of $e_c$.
+
+A truth probe-set, $P_t$, was constructed from the VCF of variants added to the
+simulated genome and a query probe-set, $P_q$, from the variants called by `pandora`. We
+then mapped all probes from $P_t$ to $P_q$ using `bwa mem` [@arxiv:1303.3997]. We then
+classify each mapped probe as a false positive or true positive and calculate precision
+and recall for the pre-*de novo* and post-*de novo* VCF files from `pandora`. As
+expected, Figure {@fig:simulation_roc} shows that without *de novo* variant discovery,
+we are unable to find almost all introduced variants. In future work, we plan to add
+indels to the simulations.
+
+![Precision-recall curve for `pandora` simulations with (circles) and without (crosses) *de novo* variant
+discovery. This plot is measuring the proportion of SNPs we introduced into our
+simulated genome we correctly found (recall) on the X-axis. On the Y-axis is the
+proportion of calls we made which were correct (precision). Colours represent different
+coverage depth. Each point represents a different genotype confidence
+threshold.](images/simulation_roc_denovo_and_no_denovo.png){#fig:simulation_roc
+width="90%"}
+
+##### Empirical data - multi-sample comparison
+
+This section will be the major focus for the evaluation of both *de novo* *and*
+`pandora` and will constitute the results section of the `pandora` paper (near
+completion). We aim to show, with the *compare* routine, the power of using a PRG
+instead of a single reference along with `pandora`'s performance compared to
+`nanopolish` and `medaka` (Nanopore) and `snippy` (Illumina)
+[@https://github.com/tseemann/snippy]. We compare 20 samples, from across the *E. coli*
+phylogeny. As other variant callers do not use a PRG we carefully selected 24
+single-reference genomes representing the diversity of the *E. coli* phylogenetic tree
+as best as possible. Each variant caller was run once for each reference genome with the
+aim being to show that the more samples in the analysis, the lower the number of
+variants the caller can find.
+
+The evaluation will again follow a similar method to the
+[Simulated data](#simulated-data). The truth for this analysis, however, is a bit more
+complicated. In the process of developing an evaluation framework, we produced a python
+package called `varifier` (<https://github.com/iqbal-lab-org/varifier>). Briefly, for
+precision, `varifier` creates 'probes' for each variant in the VCF, using the genome the
+variants we called with-respect-to. It then maps these probes to the truth genome for
+the sample and determines the distance between the variant component of the probe and
+the part of the truth genome it maps to. For recall evaluation, `varifier` collects all
+differences in the pairwise alignment between the truth and VCF-reference genomes.
+Probes are created for these differences (based on the truth genome) and they are mapped
+to an augmented version of the VCF-reference genome, which has had the variants applied
+to it. The mappings are then evaluated in the same way as for precision.  
+As `pandora compare` calls variants for each sample with respect to an inferred best
+approximation sequence for all samples, creating the set of truth variants is slightly
+different. We perform a pairwise alignment for all pairs of samples and collect all the
+differences from this alignment. We then deduplicate this panel to ensure variants are
+not "double counted", meaning core genome variants would have an unbalanced effect on
+the overall precision and recall. We then follow the same probe-mapping approach from
+`varifier` with these truth variants.
+
+<!--https://github.com/iqbal-lab/pandora1_paper/issues/209-->
+We filtered `pandora` variants based on the following criteria:
+
+- Depth less than 15x
+- Less than 20% of reads are on one strand
+- 50% or more of kmers on the allele have zero coverage
+
+After we have run this analysis, we will also most likely need to investigate applying
+filters to the VCF file to remove any biases relating to problems like strand bias or
+coverage.
+
+
+Whilst I wrote nearly all of the code and associated tests for evaluating the recall for
+this analysis, a lot of it has since been refactored by Leandro Ishi and by Martin Hunt
+in the form of `varifier`. Due to the novelty of the method we are proposing, this has
+taken quite a lot of time and thought. I wrote 1250 lines of code to evaluate the
+methods, along with 3500 lines of test code to ensure there are no bugs in our
+evaluation. Additionally, I built the original `snakemake` [@doi:10/gd2xzq] pipeline of
+approximately 3500 lines of codes to orchestrate the entire evaluation and simulations
+(However, much of this has been rewritten by Leandro Ishi).
+
+<!--TODO add ROC and associated text-->
+
+<!--TODO do we still want to do this?-->
+<!--\subsubsection{CPU and Memory Performance} In this section, we will investigate the-->
+<!--`pandora` CPU and memory performance impact of adding *de novo* variant discovery. Both-->
+<!--in single- and multi-threaded modes.-->
+
+#### Outstanding work
+
+The major work still outstanding for this project is the direct integration of *de novo*
+candidates back into the PRG. The current procedure requires a fairly laborious,
+multi-step process for adding *de novo* candidates into the PRG, requiring the user to
+run a separate pipeline from `pandora`. Ultimately this will need to be handled all
+within the `pandora` program with no intervention from the user.  
+To measure whether the reference bias effect in Figure {@fig:refbias} is real and
+significant, we plan to measure it in three species: *E. coli*, *Klebsiella pneumoniae*,
+and *Streptococcus pneumoniae*. For each of the species, we will take a set of
+high-quality reference genomes, and perform the pair-wise alignment-based evaluation
+from the `pandora` [multi-sample comparison](#empirical-data---multi-sample-comparison).
+This work will aid the message in the introduction to my first chapter. Much of this
+work is being completed by Leandro Ishi, but it borrows heavily on some of the
+evaluation code I have written for the multi-sample comparison.  
+Lastly, there is an ongoing refinement of the *de novo* variant discovery process from
+the work in Chapters 2 and 3. The analysis in these chapters lean heavily on `pandora`,
+but for Mtb, which has a very different pan-genome to that of *E. coli* - which was used
+for most of the development of `pandora`'s methods.
+
+<!--================================================================================-->
