add outstanding work section for chapter 2 [#1]

--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -702,3 +702,16 @@ recommendation of which method to call variants with: `bcftools`, `pandora map`
 to ensure clusters are as similar as possible - if it *is* possible to get comparable
 clusters.
 
+#### Outstanding work
+
+I am currently producing the `pandora` variant calls. This has required an iterative
+refinement of the *de novo* variant discovery process - thus improving it's ability to
+detect clustered variants. Additionally, there is likely to be some software development
+time required to allow the `compare` routine to deal with samples of varying coverage.
+This will entail refining some prototyping that has been done already on genotype
+confidence percentile, which allows for normalising over coverage.  
+Once the `pandora` variants are in-hand, there just remains the clustering of samples.
+We don't anticipate any impediments to generating clusters and it *should* be a fairly
+quick process.
+
+
