add progress report chapter 3 section [#3]

--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -17,7 +17,6 @@ developed world. However, many significant challenges remain.
 - There is also much to be gained from a high-quality pan-genome of Mtb as well as a
   detailed map of its enigmatic *pe/ppe* gene repertoire.
 
-
 These motivations drive the following PhD thesis structure:
 
 1. Develop algorithms and software for variant discovery using bacterial genome graphs,
@@ -110,8 +109,8 @@ interchangeably refer to as a pan-genome. Thus far, genome graph methods have fo
 mainly on eukaryotes. Given the rich diversity of genetic content in the prokaryote
 world, it would seem genome graphs are more suited to utilisation there.
 
-![An illustration of how a population reference graph (PRG) is constructed. Regions 
-(columns) of shared sequence are collapsed into a single node. Those that differ are 
+![An illustration of how a population reference graph (PRG) is constructed. Regions
+(columns) of shared sequence are collapsed into a single node. Those that differ are
 split into "bubbles", or branching nodes.](images/prg.png){#fig:prg width="100%"}
 
 Nanopore sequencing yields very long reads (up to 2.2Mbp [@doi:10/gfnkxj]), the
@@ -231,7 +230,7 @@ $s_r \in r$.
 
 For $r \in R$, where $R$ is the set of all candidate regions, we construct a de Bruijn
 graph $G_r$ from $P_r$.  
-$A_L$ and $A_R$ are defined as kmers to the left and right of $r$ in the local graph.
+$A_L$ and $A_R$ are defined as k-mers to the left and right of $r$ in the local graph.
 They are anchors to allow re-insertion of new sequences found by *de novo* discovery
 into the local graph. If $A_L \notin G_r \lor A_R \notin G_r$ then we abandon *de novo*
 discovery for $r$.  
@@ -271,7 +270,6 @@ $n$. If one of these conditions is not met, we abandon $p_r$. The advantage of t
 pruning process is that we never explore paths that will not reach our required end
 point and when caught in a cycle, we will abandon the path once we have made too many
 iterations around the cycle.
-
 
 I programmed the above methods in C++ and added them into the code base for `pandora`.
 They constitute 1325 lines of source code and 3486 lines of test code. I had help with
@@ -378,12 +376,11 @@ We filtered `pandora` variants based on the following criteria:
 
 - Depth less than 15x
 - Less than 20% of reads are on one strand
-- 50% or more of kmers on the allele have zero coverage
+- 50% or more of k-mers on the allele have zero coverage
 
 After we have run this analysis, we will also most likely need to investigate applying
 filters to the VCF file to remove any biases relating to problems like strand bias or
 coverage.
-
 
 Whilst I wrote nearly all of the code and associated tests for evaluating the recall for
 this analysis, a lot of it has since been refactored by Leandro Ishi and by Martin Hunt
@@ -586,10 +583,10 @@ Figure {@fig:alt_concordance} shows that concordance is very high between the tw
 technologies, with nearly all samples having a concordance greater than 99.5%. Call rate
 is a little lower than this, with the majority of samples being above 97%.
 
-![Call rate (Y-axis) and concordance (X-axis) of `bcftools` SNP calls to Illumina 
-COMPASS calls. Call rate is what proportion of COMPASS alternate alleles does 
-`bcftools` make a reference/alternate call. Concordance is what proportion of COMPASS 
-alternate alleles does `bcftools` genotype agree with. Each point represents a sample, 
+![Call rate (Y-axis) and concordance (X-axis) of `bcftools` SNP calls to Illumina
+COMPASS calls. Call rate is what proportion of COMPASS alternate alleles does
+`bcftools` make a reference/alternate call. Concordance is what proportion of COMPASS
+alternate alleles does `bcftools` genotype agree with. Each point represents a sample,
 with samples coloured by the site the data came from.](images/alt_concordance.png){#fig:alt_concordance}
 
 As transmission clusters are ultimately defined based on a SNP distance matrix, it is
@@ -656,7 +653,8 @@ The aim of this section will be to try varying degrees of PRG complexity for Mtb
 analysis. At this stage, we have two varieties in mind:
 
 - Sparse PRG - H37Rv and all variants from a random selection of 100 samples from each
-  lineage in the CRyPTIC dataset [@doi:10/d9kj].
+  lineage in the CRyPTIC (Comprehensive Resistance Prediction for Tuberculosis: an
+International Consortium) dataset [@doi:10/d9kj].
 - Dense PRG - The same as Sparse PRG, but 2,000 samples from each lineage.
 
 In all of the above PRGs, we will apply the same mask from the baseline analysis and
@@ -692,7 +690,6 @@ With that in mind, this section will focus on producing a distance matrix for al
 samples using the result of the `pandora compare` routine and contrast this to those
 obtained from the single-reference methods.
 
-
 #### Reproducing "truth" Illumina transmission clusters
 
 In this section we will examine how well we can recreate the transmission clusters
@@ -714,4 +711,89 @@ Once the `pandora` variants are in-hand, there just remains the clustering of sa
 We don't anticipate any impediments to generating clusters and it *should* be a fairly
 quick process.
 
+<!--================================================================================-->
+
+### Chapter 3: Applications to improving *M. tuberculosis* drug resistance prediction
+
+The genetic basis for drug resistance in Mtb is only partially understood. For the four
+first-line drugs, it is possible to detect the majority of resistant strains with high
+confidence [@doi:10/d9kj], but for second-line, novel, and repurposed drugs, this is much
+harder.
+
+Previous work from our group has shown that using whole-genome sequencing (WGS) it is
+possible to create a panel of resistance markers and then successfully use this panel to
+predict drug resistance from Mtb sequence data [@doi:10/f755tg; @doi:10/f3jjtq]. This
+work involved the development of a software program called `mykrobe` to automate this
+inference and can use either Illumina or Nanopore data [@doi:10/f94vt4]. During the
+previous year, the predictive power of `mykrobe` has expanded and become even more
+accurate [@doi:10/ggd835] (I played a small role in improving the likelihood
+calculations). This update of the `mykrobe` panel was mostly due to the recently
+published work from the CRyPTIC project [@doi:10/d9kj]. CRyPTIC aims to perform drug susceptibility
+testing and WGS on 40,000 Mtb samples (many MDR) from all over the globe, and combine
+this with WGS data from another 60,000 samples. The goal of the project is to improve
+genotypic resistance prediction by expanding our catalogue of resistance mutations.
+
+The proposed work for this chapter is based on the assumption that a large part of the
+work by this consortium (which our group is a critical part of) will be available. While
+there has already been a significant amount of data produced from CRyPTIC, there will be
+more coming during the remainder of my PhD. Given the collection of SNPs and indels
+identified as being necessary for resistance to the 14 major drugs tested, we want to
+show that we can detect them as well with Nanopore data as we can with Illumina.
+
+#### Limitations of existing methods
+
+Although there are many tools available for predicting drug resistance in Mtb from
+Illumina WGS, only two support the use of Nanopore data - `mykrobe` and `tb-profiler`
+[@doi:10/d949]. In the recent update to `mykrobe` from our group [@doi:10/ggd835], we
+have shown that the primary factor determining how well a tool performed was the
+catalogue of resistance mutations used. However, given the same panel, different tools
+do not perform identically, and therefore methodology is still important. While some
+studies have focused specifically on Nanopore data, all used a small sample size
+(Votintseva *et al.* 2017 n=5, Hunt *et al.* 2019 n=5, `tb-profiler` 2019 n=3).
+Additionally, `tb-profiler` and `mykrobe` both have limitations with their methods.
+
+`tb-profiler` uses an approach similar to a read pileup and then taking consensus at
+each site. This means they will never perform particularly well with indel calls as
+pileups do not work well for Illumina [@doi:10/d95c], let alone Nanopore. Given that
+indel calls are critical for some drugs in Mtb such as pyrazinamide [@doi:10/d9kj], this
+becomes a ceiling for the `tb-profiler` method. On the other hand, `mykrobe` uses a
+conservative, precise approach of mapping 21-mers to a de Bruijn graph. With an
+approximate error rate of 10% in Nanopore data, the probability of a correct 21-mer is
+11%. Meaning that `mykrobe` requires high depth-of-coverage to get sufficient, correct
+21-mers. By comparison, `pandora` maps entire reads to genes - rather than k-mers in
+isolation as with `mykrobe` - confirms that the read really does overlap the gene, and
+only then includes the k-mers in the calculation. Theoretically, this allows for the use
+of a smaller k-mer size and therefore reduces coverage requirements.  
+A second limitation of both `tb-profiler` and `mykrobe` is that they only genotype with
+respect to know variants - i.e. they cannot detect novel variants. The CRyPTIC
+consortium recently introduced a new approach whereby if an unknown mutation is
+identified in a gene known to be involved in resistance, they refuse to make a call and
+instead send the sample for phenotyping [@doi:10/d9kj]. On their 10,000 samples, this
+achieved a specificity and sensitivity for first-line drugs that was acceptable for
+clinical usage. This method is now in use at Public Health England for all Mtb samples
+in England. Hunt *et al.* 2019 [@doi:10/ggd835] quantified the cost of the
+pure-genotyping approach of `mykrobe`, showing that 2.4-4.6% of resistant samples were
+missed. By introducing *de novo* discovery into `pandora`, I enable us to address this
+issue, and that is the focus for this chapter.
+
+#### Drug susceptibility prediction for *M. tuberculosis* using `pandora`
+
+The work in this chapter will aim to predict drug-resistance for Mtb using `pandora` and
+its new *de novo* component introduced in
+[Chapter 1](#chapter-1-variant-discovery-in-genome-graphs). The first step in this will
+be producing a gene-succinct PRG that includes variants from the above-mentioned CRyPTIC
+work that are known to cause resistance or susceptibility. This PRG will be easy to
+build as the alleles and probes for these variants-of-interest are already defined for
+`mykrobe`. I will write a software program (either an extension of `pandora` or a
+standalone tool) that takes the output of `pandora` used with this PRG and makes
+predictions about resistance, susceptibility, and whether phenotyping should be
+performed. As we know whether an allele causes resistance or susceptibility, this
+prediction will be straightforward to implement.
+
+I plan to validate this approach with the data from
+[Chapter 2](#chapter-2-applications-to-m-tuberculosis-nanopore-variant-calling),
+comparing concordance with `mykrobe` for Illumina and Nanopore. In particular, the
+analysis will focus on the (hopefully) lower coverage required by `pandora` to achieve
+the same, or better, results as `mykrobe`, and the increased detection power provided by
+*de novo* variant discovery.
 
